--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,17 +22,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "(True,\n",
-       " 'Bearer eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJleHAiOjE1NTU0NjUzMDUsImlhdCI6MTU1NTQ1ODEwNSwibmJmIjoxNTU1NDU4MTA1LCJqdGkiOiJhZjE3MGFkOS0xNmIwLTQ5NTctYTQyZS02NWE1MjA2MjdmNGYiLCJpZGVudGl0eSI6IjZkMzFmMjA0LTRmMzUtMTFlOS1hOTFkLTIzZmM0YzIwZDQwOSIsImZyZXNoIjpmYWxzZSwidHlwZSI6ImFjY2VzcyJ9.YpSrJ01AXqIafohvgJM45TiJRZFC6w2dXHVWSFpoKPM')"
+       " 'Bearer eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJleHAiOjE1NTU0NjYxNzcsImlhdCI6MTU1NTQ1ODk3NywibmJmIjoxNTU1NDU4OTc3LCJqdGkiOiI0YmRjNmRiOS0wOWI0LTQzMmUtYmRlZC0wMzQ4ZTY5MmY0NTgiLCJpZGVudGl0eSI6IjZkMzFmMjA0LTRmMzUtMTFlOS1hOTFkLTIzZmM0YzIwZDQwOSIsImZyZXNoIjpmYWxzZSwidHlwZSI6ImFjY2VzcyJ9.XpJcx1jESjSuicsDBKGNOfj_8MMDZVSOAtt53Q_fQ9I')"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,12 +155,14 @@
     "\n",
     "col_names = ['State_FIPS_Code', 'County_FIPS_Code', 'No_Exercise','Few_Fruit_Veg','Obesity','High_Blood_Pres','Smoker','Diabetes','Uninsured']\n",
     "risk_factors_df = create_new_df(\"RISKFACTORSANDACCESSTOCARE.csv\", col_names)\n",
-    "df_list.append(risk_factors_df)\n"
+    "df_list.append(risk_factors_df)\n",
+    "\n",
+    "labels = create_new_df(\"RISKFACTORSANDACCESSTOCARE.csv\", ['HPSA_Ind'])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -736,7 +738,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
