--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,24 +15,26 @@
     "from time import sleep\n",
     "import os\n",
     "import numpy as np\n",
+    "import sklearn as sk\n",
     "from sklearn.metrics import classification_report\n",
+    "from sklearn.model_selection import train_test_split\n",
     "\n",
     "from amb_sdk.sdk import DarwinSdk"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "(True,\n",
-       " 'Bearer eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJleHAiOjE1NTU3MTEzNjEsImlhdCI6MTU1NTcwNDE2MSwibmJmIjoxNTU1NzA0MTYxLCJqdGkiOiI0ZGVkZTEyZi0wNDZlLTQ5MzUtOGNkNy0wMTE5ZjJmMWU2OTciLCJpZGVudGl0eSI6IjU3MDgyZjcwLTRmMzUtMTFlOS1iYTc2LTZiZjBjNmEwNDgyMSIsImZyZXNoIjpmYWxzZSwidHlwZSI6ImFjY2VzcyJ9.zwLt6qzPm5AP8OAkVn1ivE5rvvQJHXHcK2elbio83lQ')"
+       " 'Bearer eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJleHAiOjE1NTU4OTg3ODEsImlhdCI6MTU1NTg5MTU4MSwibmJmIjoxNTU1ODkxNTgxLCJqdGkiOiIzYjBjYWVlNS04ODdmLTRmYmYtOTNmMy0xNDAwYTAyMjIxOGIiLCJpZGVudGl0eSI6IjU3MDgyZjcwLTRmMzUtMTFlOS1iYTc2LTZiZjBjNmEwNDgyMSIsImZyZXNoIjpmYWxzZSwidHlwZSI6ImFjY2VzcyJ9.6pt1i0dzW_P5T4zTcXnelfgQ5znGvy6Emg2bTlZ2shs')"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +444,7 @@
        "[5 rows x 62 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -453,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -702,29 +704,48 @@
        "[5 rows x 62 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cleaned_merged_df = merged_df.replace([-9999, -9998.9, -2222.2, -2222, -1111.1, -1111, -2, -1], np.nan)\n",
+    "#Replace \"bad data\" with Nans\n",
+    "altered_merged_df = merged_df.replace([-9999, -9998.9, -2222.2, -2222, -1111.1, -1111, -2, -1], np.nan)\n",
     "#Removed rows with NaNs\n",
-    "cleaned_merged_df.dropna(inplace=True)\n",
-    "dataset_name = \"CLEANEDANDMERGEDDATA.csv\"\n",
-    "cleaned_merged_df.to_csv(dataset_name, sep='\\t')\n",
-    "cleaned_merged_df.head()"
+    "altered_merged_df.dropna(inplace=True)\n",
+    "total_dataset_name = \"ALTEREDANDMERGEDDATA.csv\"\n",
+    "altered_merged_df.to_csv(total_dataset_name, sep='\\t')\n",
+    "altered_merged_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Upload dataset to Darwin\n",
-    "status, message = ds.delete_dataset(dataset_name)\n",
-    "status, dataset = ds.upload_dataset(dataset_name)\n",
+    "#Split data into train and test using 80-20 ratio\n",
+    "data_feats = altered_merged_df.loc[:, altered_merged_df.columns != 'HPSA_Ind']\n",
+    "data_labels = altered_merged_df.iloc[:, altered_merged_df.columns =='HPSA_Ind']\n",
+    "train_feats,test_feats, train_labels, test_labels = sk.model_selection.train_test_split(data_feats, data_labels, test_size=0.2)\n",
+    "train_data = train_feats.join(train_labels)\n",
+    "test_data = test_feats.join(test_labels)\n",
+    "train_dataset_name = \"TRAINDATA.csv\"\n",
+    "test_dataset_name = \"TESTDATA.csv\" \n",
+    "train_data.to_csv(train_dataset_name, sep='\\t')\n",
+    "test_data.to_csv(test_dataset_name, sep='\\t')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Upload train dataset to Darwin\n",
+    "status, message = ds.delete_dataset(train_dataset_name)\n",
+    "status, dataset = ds.upload_dataset(train_dataset_name)\n",
     "if not status:\n",
     "    print(dataset)"
    ]
@@ -735,11 +756,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Clean dataset\n",
+    "#Clean train dataset\n",
     "target = \"HPSA_Ind\"\n",
     "# status, job_id = ds.clean_data(dataset_name, target = target)\n",
     "artifact_name = \"cleaned_dataset\"\n",
-    "cleaned_dataset_info = ds.clean_data(dataset_name, artifact_name = artifact_name, target = target)\n",
+    "cleaned_dataset_info = ds.clean_data(train_dataset_name, artifact_name = artifact_name, target = target)\n",
     "cleaned_dataset_artifact_info = ds.download_dataset(artifact_name, \n",
     "                                                    artifact_path = \"/Users/arathikumar/Desktop/2018-2019/DataMining/DataMiningFinalProject/Artifacts\")\n",
     "# if status:\n",
@@ -782,7 +803,7 @@
     }
    ],
    "source": [
-    "#Train\n",
+    "#Train model on training data\n",
     "model = target + \"_model0\"\n",
     "status, message = ds.delete_model(model_name =  model)\n",
     "#download dataset\n",
@@ -815,7 +836,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Run\n",
+    "#Clean test dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Run on Test\n",
     "status, artifact = ds.run_model(dataset_name, model)\n",
     "sleep(1)\n",
     "ds.wait_for_job(artifact['job_name'])"
