Running test data through model

--- a/CombinedWork.ipynb
+++ b/CombinedWork.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,17 +26,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "(True,\n",
-       " 'Bearer eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJleHAiOjE1NTU5MDc1NDQsImlhdCI6MTU1NTkwMDM0NCwibmJmIjoxNTU1OTAwMzQ0LCJqdGkiOiIzNTJhNmNmZC02NzRiLTQ5Y2UtYjE1Ny0zOTViZjNmNmFhZjgiLCJpZGVudGl0eSI6Ijc2NmRiM2JjLTRmMzUtMTFlOS1iMzEwLTc3ZWRkN2EzNzNhOSIsImZyZXNoIjpmYWxzZSwidHlwZSI6ImFjY2VzcyJ9.TC6J2q-Aw2HofyCMQuVbu0IAkCNimefCrtCMQ9RCBm0')"
+       " 'Bearer eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJleHAiOjE1NTU5MTE2MjksImlhdCI6MTU1NTkwNDQyOSwibmJmIjoxNTU1OTA0NDI5LCJqdGkiOiJkMTlmNTU5OS1hZGNjLTRiMTktYWU0Ny1hYmFjOGM2Mjc0YTMiLCJpZGVudGl0eSI6Ijc2NmRiM2JjLTRmMzUtMTFlOS1iMzEwLTc3ZWRkN2EzNzNhOSIsImZyZXNoIjpmYWxzZSwidHlwZSI6ImFjY2VzcyJ9.Nug8JZAN1J-3rm2_1d-9FDrB8Q3eoenF2QIN9NHfowg')"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +383,7 @@
        "[5 rows x 54 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -600,7 +600,7 @@
        "[5 rows x 53 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -618,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -823,7 +823,7 @@
        "[5 rows x 53 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -840,7 +840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1045,7 +1045,7 @@
        "[5 rows x 53 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1061,7 +1061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1266,7 +1266,7 @@
        "[5 rows x 54 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1279,7 +1279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1313,11 +1313,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
     "train_dataset_name = \"healthcare-train-data\"\n",
+    "\n",
     "ds.delete_dataset(train_dataset_name)\n",
     "status, dataset = ds.upload_dataset(train_dataset_filename, train_dataset_name)\n",
     "if not status:\n",
@@ -1326,7 +1327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1334,232 +1335,30 @@
      "output_type": "stream",
      "text": [
       "True\n",
-      "{'dataset_name': 'healthcare-train-data'}\n"
+      "{'dataset_name': 'healthcare-train-data'}\n",
+      "healthcare-train-data\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Population_Size</th>\n",
-       "      <th>Population_Density</th>\n",
-       "      <th>Poverty</th>\n",
-       "      <th>Age_19_Under</th>\n",
-       "      <th>Age_19_64</th>\n",
-       "      <th>Age_65_84</th>\n",
-       "      <th>Age_85_and_Over</th>\n",
-       "      <th>White</th>\n",
-       "      <th>Black</th>\n",
-       "      <th>Native_American</th>\n",
-       "      <th>...</th>\n",
-       "      <th>Pert_Rpt</th>\n",
-       "      <th>Pert_Exp</th>\n",
-       "      <th>Syphilis_Rpt</th>\n",
-       "      <th>Syphilis_Exp</th>\n",
-       "      <th>No_Exercise</th>\n",
-       "      <th>Obesity</th>\n",
-       "      <th>Smoker</th>\n",
-       "      <th>Diabetes</th>\n",
-       "      <th>Uninsured</th>\n",
-       "      <th>HPSA_Ind</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>447</th>\n",
-       "      <td>-0.243329</td>\n",
-       "      <td>2.005307</td>\n",
-       "      <td>-1.345736</td>\n",
-       "      <td>-0.165102</td>\n",
-       "      <td>-1.325782</td>\n",
-       "      <td>-0.544311</td>\n",
-       "      <td>-0.054583</td>\n",
-       "      <td>-0.556830</td>\n",
-       "      <td>-0.390295</td>\n",
-       "      <td>0.659554</td>\n",
-       "      <td>...</td>\n",
-       "      <td>-0.117629</td>\n",
-       "      <td>0.110573</td>\n",
-       "      <td>-0.061052</td>\n",
-       "      <td>-0.098686</td>\n",
-       "      <td>0.008493</td>\n",
-       "      <td>0.190549</td>\n",
-       "      <td>0.010663</td>\n",
-       "      <td>0.002154</td>\n",
-       "      <td>0.017040</td>\n",
-       "      <td>2.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2385</th>\n",
-       "      <td>-1.813943</td>\n",
-       "      <td>-0.524837</td>\n",
-       "      <td>2.817998</td>\n",
-       "      <td>0.999064</td>\n",
-       "      <td>-3.667951</td>\n",
-       "      <td>0.866390</td>\n",
-       "      <td>0.096048</td>\n",
-       "      <td>-0.802866</td>\n",
-       "      <td>-0.606924</td>\n",
-       "      <td>-0.227494</td>\n",
-       "      <td>...</td>\n",
-       "      <td>-0.014219</td>\n",
-       "      <td>0.019236</td>\n",
-       "      <td>0.009858</td>\n",
-       "      <td>0.043156</td>\n",
-       "      <td>0.005032</td>\n",
-       "      <td>0.018702</td>\n",
-       "      <td>-0.010966</td>\n",
-       "      <td>-0.006441</td>\n",
-       "      <td>0.001771</td>\n",
-       "      <td>2.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1446</th>\n",
-       "      <td>-0.927915</td>\n",
-       "      <td>4.372563</td>\n",
-       "      <td>-0.696386</td>\n",
-       "      <td>-1.550918</td>\n",
-       "      <td>-1.535273</td>\n",
-       "      <td>-0.927266</td>\n",
-       "      <td>0.395450</td>\n",
-       "      <td>-0.948328</td>\n",
-       "      <td>0.052051</td>\n",
-       "      <td>0.078497</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.071832</td>\n",
-       "      <td>-0.066098</td>\n",
-       "      <td>0.037483</td>\n",
-       "      <td>0.026782</td>\n",
-       "      <td>-0.010395</td>\n",
-       "      <td>0.044639</td>\n",
-       "      <td>-0.000199</td>\n",
-       "      <td>0.000696</td>\n",
-       "      <td>-0.001001</td>\n",
-       "      <td>2.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>632</th>\n",
-       "      <td>-1.354179</td>\n",
-       "      <td>-1.422886</td>\n",
-       "      <td>1.138024</td>\n",
-       "      <td>-0.665693</td>\n",
-       "      <td>0.386648</td>\n",
-       "      <td>0.070790</td>\n",
-       "      <td>0.015483</td>\n",
-       "      <td>-0.358562</td>\n",
-       "      <td>0.021813</td>\n",
-       "      <td>0.660154</td>\n",
-       "      <td>...</td>\n",
-       "      <td>-0.015423</td>\n",
-       "      <td>0.022124</td>\n",
-       "      <td>0.015447</td>\n",
-       "      <td>0.023262</td>\n",
-       "      <td>-0.016280</td>\n",
-       "      <td>0.011623</td>\n",
-       "      <td>-0.002993</td>\n",
-       "      <td>-0.022670</td>\n",
-       "      <td>0.000534</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>-0.777983</td>\n",
-       "      <td>1.533252</td>\n",
-       "      <td>-0.731353</td>\n",
-       "      <td>-1.111979</td>\n",
-       "      <td>1.220068</td>\n",
-       "      <td>-0.143426</td>\n",
-       "      <td>0.253152</td>\n",
-       "      <td>-0.120999</td>\n",
-       "      <td>-0.058772</td>\n",
-       "      <td>-0.085646</td>\n",
-       "      <td>...</td>\n",
-       "      <td>-0.001365</td>\n",
-       "      <td>-0.120796</td>\n",
-       "      <td>0.015021</td>\n",
-       "      <td>0.030736</td>\n",
-       "      <td>0.012450</td>\n",
-       "      <td>0.089009</td>\n",
-       "      <td>-0.007636</td>\n",
-       "      <td>0.004050</td>\n",
-       "      <td>-0.020070</td>\n",
-       "      <td>2.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 54 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      Population_Size  Population_Density   Poverty  Age_19_Under  Age_19_64  \\\n",
-       "447         -0.243329            2.005307 -1.345736     -0.165102  -1.325782   \n",
-       "2385        -1.813943           -0.524837  2.817998      0.999064  -3.667951   \n",
-       "1446        -0.927915            4.372563 -0.696386     -1.550918  -1.535273   \n",
-       "632         -1.354179           -1.422886  1.138024     -0.665693   0.386648   \n",
-       "0           -0.777983            1.533252 -0.731353     -1.111979   1.220068   \n",
-       "\n",
-       "      Age_65_84  Age_85_and_Over     White     Black  Native_American  \\\n",
-       "447   -0.544311        -0.054583 -0.556830 -0.390295         0.659554   \n",
-       "2385   0.866390         0.096048 -0.802866 -0.606924        -0.227494   \n",
-       "1446  -0.927266         0.395450 -0.948328  0.052051         0.078497   \n",
-       "632    0.070790         0.015483 -0.358562  0.021813         0.660154   \n",
-       "0     -0.143426         0.253152 -0.120999 -0.058772        -0.085646   \n",
-       "\n",
-       "        ...     Pert_Rpt  Pert_Exp  Syphilis_Rpt  Syphilis_Exp  No_Exercise  \\\n",
-       "447     ...    -0.117629  0.110573     -0.061052     -0.098686     0.008493   \n",
-       "2385    ...    -0.014219  0.019236      0.009858      0.043156     0.005032   \n",
-       "1446    ...     0.071832 -0.066098      0.037483      0.026782    -0.010395   \n",
-       "632     ...    -0.015423  0.022124      0.015447      0.023262    -0.016280   \n",
-       "0       ...    -0.001365 -0.120796      0.015021      0.030736     0.012450   \n",
-       "\n",
-       "       Obesity    Smoker  Diabetes  Uninsured  HPSA_Ind  \n",
-       "447   0.190549  0.010663  0.002154   0.017040       2.0  \n",
-       "2385  0.018702 -0.010966 -0.006441   0.001771       2.0  \n",
-       "1446  0.044639 -0.000199  0.000696  -0.001001       2.0  \n",
-       "632   0.011623 -0.002993 -0.022670   0.000534       1.0  \n",
-       "0     0.089009 -0.007636  0.004050  -0.020070       2.0  \n",
-       "\n",
-       "[5 rows x 54 columns]"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "print(status)\n",
     "print(dataset)\n",
-    "train_data.head()"
+    "train_data.head()\n",
+    "print(train_dataset_name)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'status': 'Requested', 'starttime': '2019-04-21T21:34:47.154722', 'endtime': None, 'percent_complete': 0, 'job_type': 'CleanDataTiny', 'loss': None, 'generations': None, 'dataset_names': ['healthcare-train-data'], 'artifact_names': ['e0c853c6fd074d36acd933eee1afc451'], 'model_name': None, 'job_error': None}\n"
+      "{'status': 'Requested', 'starttime': '2019-04-21T22:42:40.602528', 'endtime': None, 'percent_complete': 0, 'job_type': 'CleanDataTiny', 'loss': None, 'generations': None, 'dataset_names': ['healthcare-train-data'], 'artifact_names': ['bebd8a2bd1a541f586f197afd7eba1f8'], 'model_name': None, 'job_error': None}\n",
+      "{'status': 'Complete', 'starttime': '2019-04-21T22:42:40.602528', 'endtime': '2019-04-21T22:42:44.738202', 'percent_complete': 100, 'job_type': 'CleanDataTiny', 'loss': None, 'generations': None, 'dataset_names': ['healthcare-train-data'], 'artifact_names': ['bebd8a2bd1a541f586f197afd7eba1f8'], 'model_name': None, 'job_error': ''}\n",
+      "{'job_name': 'e5c8b711b2f64389819f8d82f1e66a62', 'artifact_name': 'bebd8a2bd1a541f586f197afd7eba1f8'}\n"
      ]
     }
    ],
@@ -1572,10 +1371,98 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(True, None)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Create model using cleaned, PCAd training set\n",
+    "model_name= labels_col + \"_model0\"\n",
+    "status = ds.delete_model(model_name)\n",
+    "print(status)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'status': 'Requested', 'starttime': '2019-04-21T22:43:29.724917', 'endtime': None, 'percent_complete': 0, 'job_type': 'TrainModel', 'loss': None, 'generations': 0, 'dataset_names': ['healthcare-train-data'], 'artifact_names': None, 'model_name': 'HPSA_Ind_model0', 'job_error': None}\n",
+      "{'status': 'Running', 'starttime': '2019-04-21T22:43:29.724917', 'endtime': None, 'percent_complete': 7, 'job_type': 'TrainModel', 'loss': 0.5270211100578308, 'generations': 3, 'dataset_names': ['healthcare-train-data'], 'artifact_names': None, 'model_name': 'HPSA_Ind_model0', 'job_error': ''}\n",
+      "{'status': 'Running', 'starttime': '2019-04-21T22:43:29.724917', 'endtime': None, 'percent_complete': 9, 'job_type': 'TrainModel', 'loss': 0.5270211100578308, 'generations': 4, 'dataset_names': ['healthcare-train-data'], 'artifact_names': None, 'model_name': 'HPSA_Ind_model0', 'job_error': ''}\n",
+      "{'status': 'Running', 'starttime': '2019-04-21T22:43:29.724917', 'endtime': None, 'percent_complete': 9, 'job_type': 'TrainModel', 'loss': 0.5270211100578308, 'generations': 4, 'dataset_names': ['healthcare-train-data'], 'artifact_names': None, 'model_name': 'HPSA_Ind_model0', 'job_error': ''}\n",
+      "{'status': 'Running', 'starttime': '2019-04-21T22:43:29.724917', 'endtime': None, 'percent_complete': 25, 'job_type': 'TrainModel', 'loss': 0.466322585940361, 'generations': 4, 'dataset_names': ['healthcare-train-data'], 'artifact_names': None, 'model_name': 'HPSA_Ind_model0', 'job_error': ''}\n",
+      "{'status': 'Running', 'starttime': '2019-04-21T22:43:29.724917', 'endtime': None, 'percent_complete': 25, 'job_type': 'TrainModel', 'loss': 0.466322585940361, 'generations': 4, 'dataset_names': ['healthcare-train-data'], 'artifact_names': None, 'model_name': 'HPSA_Ind_model0', 'job_error': ''}\n",
+      "{'status': 'Running', 'starttime': '2019-04-21T22:43:29.724917', 'endtime': None, 'percent_complete': 25, 'job_type': 'TrainModel', 'loss': 0.466322585940361, 'generations': 4, 'dataset_names': ['healthcare-train-data'], 'artifact_names': None, 'model_name': 'HPSA_Ind_model0', 'job_error': ''}\n",
+      "{'status': 'Running', 'starttime': '2019-04-21T22:43:29.724917', 'endtime': None, 'percent_complete': 25, 'job_type': 'TrainModel', 'loss': 0.466322585940361, 'generations': 4, 'dataset_names': ['healthcare-train-data'], 'artifact_names': None, 'model_name': 'HPSA_Ind_model0', 'job_error': ''}\n",
+      "{'status': 'Running', 'starttime': '2019-04-21T22:43:29.724917', 'endtime': None, 'percent_complete': 25, 'job_type': 'TrainModel', 'loss': 0.466322585940361, 'generations': 4, 'dataset_names': ['healthcare-train-data'], 'artifact_names': None, 'model_name': 'HPSA_Ind_model0', 'job_error': ''}\n",
+      "{'status': 'Complete', 'starttime': '2019-04-21T22:43:29.724917', 'endtime': '2019-04-21T22:45:35.485087', 'percent_complete': 100, 'job_type': 'TrainModel', 'loss': 0.466322585940361, 'generations': 4, 'dataset_names': ['healthcare-train-data'], 'artifact_names': None, 'model_name': 'HPSA_Ind_model0', 'job_error': ''}\n"
+     ]
+    }
+   ],
+   "source": [
+    "status, job_id = ds.create_model(dataset_names='healthcare-train-data', model_name =  model_name, max_train_time = '00:02')\n",
+    "if status:\n",
+    "    ds.wait_for_job(job_id['job_name'])\n",
+    "else:\n",
+    "    print(job_id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_dataset_name = \"healthcare-test-data\"\n",
+    "\n",
+    "ds.delete_dataset(test_dataset_name)\n",
+    "status, dataset = ds.upload_dataset(test_dataset_filename, test_dataset_name)\n",
+    "if not status:\n",
+    "    print(dataset)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'status': 'Taken', 'starttime': '2019-04-21T22:49:25.735448', 'endtime': None, 'percent_complete': 0, 'job_type': 'CleanDataTiny', 'loss': None, 'generations': None, 'dataset_names': ['healthcare-test-data'], 'artifact_names': ['13fc22a357154a0db48da2de665c9133'], 'model_name': None, 'job_error': None}\n",
+      "{'status': 'Complete', 'starttime': '2019-04-21T22:49:25.735448', 'endtime': '2019-04-21T22:49:28.57768', 'percent_complete': 100, 'job_type': 'CleanDataTiny', 'loss': None, 'generations': None, 'dataset_names': ['healthcare-test-data'], 'artifact_names': ['13fc22a357154a0db48da2de665c9133'], 'model_name': None, 'job_error': ''}\n",
+      "{'job_name': '121f295b3d3945bdad6198d02d3fd74f', 'artifact_name': '13fc22a357154a0db48da2de665c9133'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "status, job_id = ds.clean_data(test_dataset_name, target=labels_col)\n",
+    "if status:\n",
+    "    ds.wait_for_job(job_id['job_name'])\n",
+    "print(job_id)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "status, job_id = ds.run_model"
+   ]
   }
  ],
  "metadata": {
