--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -1602,9 +1602,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 67,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "403: FORBIDDEN - {\"message\": \"Your token is out of date\"}\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "train_dataset_name = \"healthcare-train-data\"\n",
     "ds.delete_dataset(train_dataset_name)\n",
@@ -1638,7 +1647,9 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
