--- a/DarwinCode_UnbalancedData.ipynb
+++ b/DarwinCode_UnbalancedData.ipynb
@@ -1751,45 +1751,29 @@
     }
    ],
    "source": [
+    "\"\"\"We have chosen to comment out this section because while it worked initially, the Darwin method \n",
+    "call fails to complete (gives a status on 'Running' indefinitely) when we have tried to call it again\"\"\"\n",
+    "\n",
     "#Use Darwin to analyze predictions\n",
-    "status, job_id = ds.analyze_predictions(model_name, test_dataset_name)\n",
-    "if status:\n",
-    "    ds.wait_for_job(job_id['job_name'])\n",
-    "print(job_id)"
+    "# status, job_id = ds.analyze_predictions(model_name, test_dataset_name)\n",
+    "# if status:\n",
+    "#     ds.wait_for_job(job_id['job_name'])\n",
+    "# print(job_id)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "404: NOT FOUND - {\"message\": \"Failed to find artifact 807cad5fc72f40ac876d5486856652b1\"}\n",
-      "\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "DataFrame constructor not properly called!",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-101-5f87f231d0b4>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mstatus\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0martifact\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mds\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdownload_artifact\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mjob_id\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'artifact_name'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0martifact\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0manalyze_df\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0martifact\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m \u001b[0manalyze_df\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mC:\\ProgramData\\Anaconda3\\lib\\site-packages\\pandas\\core\\frame.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, data, index, columns, dtype, copy)\u001b[0m\n\u001b[0;32m    420\u001b[0m                                          dtype=values.dtype, copy=False)\n\u001b[0;32m    421\u001b[0m             \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 422\u001b[1;33m                 \u001b[1;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'DataFrame constructor not properly called!'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    423\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    424\u001b[0m         \u001b[0mNDFrame\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__init__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmgr\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfastpath\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mValueError\u001b[0m: DataFrame constructor not properly called!"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#Print results of analyze_predictions call\n",
-    "status, artifact = ds.download_artifact(job_id['artifact_name'])\n",
-    "print(artifact)\n",
-    "analyze_df = pd.DataFrame(artifact)\n",
-    "analyze_df.head()"
+    "\"\"\"Cannot run without successful call to analyze_model\"\"\"\n",
+    "\n",
+    "# #Print results of analyze_predictions call\n",
+    "# status, artifact = ds.download_artifact(job_id['artifact_name'])\n",
+    "# print(artifact)\n",
+    "# analyze_df = pd.DataFrame(artifact)\n",
+    "# analyze_df.head()"
    ]
   },
   {
